--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +28,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.7.0",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.1.3"
   }
 }
