--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "^3.2.0"
+    "react-redux": "^7.1.1",
+    "react-scripts": "^3.2.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "start": "npm run build:style && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,7 +34,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.0",
+    "glob-all": "^3.1.0",
     "postcss-cli": "^6.1.3",
+    "purgecss-webpack-plugin": "^1.6.0",
     "tailwindcss": "^1.1.3"
   }
 }
