--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^2.5.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
