--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "firebase": "^7.2.2",
     "react": "^16.11.0",
